--- a/src/content/components/FolderListModal/FolderListModal.module.css
+++ b/src/content/components/FolderListModal/FolderListModal.module.css
@@ -379,7 +379,7 @@
 }
 
 
-@keyframes spin {
+@keyframes xplaino-spin {
   to {
     transform: rotate(360deg);
   }
